# musync

./: README.md  WALKTHROUGH.md  musync.toml  pyproject.toml
.claude/: settings.json
app/: index.html  main.py  package-lock.json  package.json
app/electron/: main.js
app/src/: App.tsx  api.ts
app/src/components/: FilePicker.tsx  WatchView.tsx
scripts/: build-backend.ps1  build-backend.sh
src/musync/: __init__.py  cli.py  mapping.py  model.py  server.py  watcher.py
src/musync/dorico/: dtn.py  extractor.py  parser.py  writer.py
src/musync/logic/: extractor.py  parser.py  writer.py
src/musync/staffpad/: extractor.py  parser.py  writer.py
src/musync/sync/: diff.py  snapshot.py
