[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musync"
version = "0.1.0"
description = "Bidirectional sync between Logic Pro and Dorico projects"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "watchdog>=3.0",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.scripts]
musync = "musync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/musync"]
